Review suggestion
Signed-off-by: Leo Siepel <leosiepel@gmail.com>